<resources>
    <string name="app_name">PawtentialPals</string>
    <string name="hello">Hello!</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome back to PawtentialPals!</string>
    <string name="create_account">Create a PawtentialPals account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="next">Next</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_your_photo">Upload your photo</string>
    <string name="input_description">Enter your description</string>
    <string name="input_location">Enter your location</string>
    <string name="input_puppy_location">Enter your puppy location</string>
    <string name="post">Post</string>
    <string name="google_maps_key">AIzaSyDZHE0jtrWArab41ZbQN5YPTJqYeJC-jrU</string>
</resources>
